# RoboSchrauber

./: .gitignore  README.md  localizer.ipynb  pyproject.toml  yolo.ipynb
CAD/: 20251209_Kamera_halter_v01_RM.STEP  20260213_Kamera_adapter_v02_RM.STEP  Adapter_B.step  Clip-On_Bracket.STEP
