[project]
name = "atp"
version = "0.1.0"
description = ""
authors = [
    {name = "marius-ne",email = "m.e.neuhalfen@t-online.de"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ultralytics (>=8.3.232,<9.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "label-studio (>=1.21.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
